[package]
name = "ferrite-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web server
axum = { version = "0.6", features = ["http2", "ws"] }
http = "*"
headers = "*"
# Storage
rocksdb = "0.21"
# async
tokio = { version = "1.29", features = ["full"] }
# json parsing
serde = { version = "1.0", features = ["derive"] }
# event IDs
ulid = "1.0"
